--- a/Phase II/HomePage/index.html
+++ b/Phase II/HomePage/index.html
@@ -74,9 +74,9 @@
                 <!-- Header top right icons-->
                 <div class="signup">
                     <div class="sign-up">
-                        <button> <span>Seller</span>
+                        <a href="../SellerHomePage/seller.html" style="color: white;"><button> <span>Seller</span></a>
                         </button>
-                        <button> <span>Sign up</span>
+                        <a href="../LoginSignUp/customerLogin.html" style="color: white;"><button> <span>Sign up</span></a>
                         </button>
                     </div>
                     <div class="cart-icon">
