--- a/Phase II/SellerHomePage/seller.html
+++ b/Phase II/SellerHomePage/seller.html
@@ -19,7 +19,7 @@
       </div>
       <div class="nav">
         <ul>
-          <li class="home"><a href="#">Home</a></li>
+          <li class="home"><a href="../HomePage/index.html">Home</a></li>
           <li class="about"><a href="../AbouUs/abouthtml.html">About</a></li>
           <li class="contact"><a href="../contactUs/contaactus.html">Contact</a></li>
           <li class="blog"><a href="../Blog/blog-display.html">Blog</a></li>
