--- a/Phase II/AbouUs/abouthtml.html
+++ b/Phase II/AbouUs/abouthtml.html
@@ -28,16 +28,10 @@
     <div class="container">
         <h1>About Us...</h1>
         <p class="text">
-            We are a Group of Addis Ababa Science and Technology University Software Engineering Students Who has Vision
-            to change Ethiopian E-Commerce usage and we also have the Skills and Potential to do it.</p>
-        <p class="text"> We Offer Great Customer service, and you can buy sell products easily on our website if you
-            want to buy something and if you don't have time purchase with us and save your time and money We provide
-            quality products with average money and your
-            transaction information is safe with us you can pay your bill online we offer many different payment systems
-            and also we included delivery systems you will be happy with our customer service and with our quality
-            commodities.</p>
-        <p class="text">If you dont have any experiance don't Worry we will help you out!!!
-        </p>
+            We are a Group of Addis Ababa Science and Technology University Software Engineering Students Who has Vision to change Ethiopian E-Commerce usage and we also have the Skills and Potential to do it.</p>
+        <p class="text"> We Offer Great Customer service, and you can buy sell products easily on our website if you want to buy something and if you don't have time purchase with us and save your time and money We provide quality products with average money and your
+            transaction information is safe with us you can pay your bill online we offer many different payment systems and also we included delivery systems you will be happy with our customer service and with our quality commodities.</p>
+        <p class="text">If you dont have any experiance don't Worry we will help you out!!!</p>
         <div class="skills">
             <div class="card">
                 <h2>Target</h2>
