--- a/Phase II/LoginSignUp/sellerLoginSignup.html
+++ b/Phase II/LoginSignUp/sellerLoginSignup.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="loginSignU_style.css">
     <link rel="stylesheet" href="styles/home.css" type="text/css" />
     <link rel="stylesheet" href="template.css">
-    <script type="module" src="sellerScript.js" defer></script>
+    <script type="module" src="../script/sellerScript.js" defer></script>
     <link rel="stylesheet" href="../header.css">
 </head>
 
@@ -201,5 +201,4 @@
         </div>
 
     </footer>
-    <script src="try.js"></script>
 </body>
