--- a/Phase II/LoginSignUp/customerLogin.html
+++ b/Phase II/LoginSignUp/customerLogin.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="loginSignU_style.css">
     <link rel="stylesheet" href="template.css">
     <link rel="stylesheet" href="../header.css">
-    <script type="module" src="customerLoginScript.js" defer></script>
+    <script type="module" src="../script/customerLoginScript.js" defer></script>
 </head>
 
 <body>
