--- a/Phase II/AbouUs/abouthtml.html
+++ b/Phase II/AbouUs/abouthtml.html
@@ -3,9 +3,9 @@
 
 <head>
     <title>About</title>
-    <link rel="stylesheet" href="about.css">
-    <link rel="stylesheet" href="faq.css">
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../styles/about.css">
+    <link rel="stylesheet" href="../styles/faq.css">
+    <link rel="stylesheet" href="../styles/header.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
@@ -58,5 +58,32 @@
             </div>
         </div>
     </div>
+
+    <footer>
+        <div class="social">
+            <div class="call">
+                <i class="fas fa-phone"></i>
+                <span>CALL US</span>
+                <p>+25199485769</p>
+            </div>
+
+            <div class="call">
+                <i class="fas fa-map-marker-alt"></i>
+                <span>LOCATE US</span>
+                <p>Addis Ababa science and technology university</p>
+            </div>
+
+            <div class="call">
+                <i class="far fa-envelope-open"></i>
+                <span>SEND US EMAIL</span>
+                <p>store@megamart.com</p>
+            </div>
+
+            <div class="foot-bottom call">
+                All righ reserved &copy; 2022. <span>MEGAMART</span>
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
