--- a/Phase II/HomePage/catagory.html
+++ b/Phase II/HomePage/catagory.html
@@ -6,11 +6,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEGA MART</title>
-    <link rel="stylesheet" href="styles/all.min.css">
+    <link rel="stylesheet" href="../styles/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="styles/home.css" type="text/css" />
-    <link rel="stylesheet" href="styles/catagory.css" type="text/css" />
-    <script src="./script/app.js" defer></script>
+    <link rel="stylesheet" href="../styles/home.css" type="text/css" />
+    <link rel="stylesheet" href="../styles/catagory.css" type="text/css" />
+    <script src="../script/app.js" defer></script>
 
 </head>
 
@@ -98,6 +98,11 @@
                 <div class="icon">
                     <i class="fas fa-angle-double-down"></i>
                 </div>
+            </div>
+            <div class="customer-btn nav-btn">
+
+                <i class="fas fa-headset"></i>
+                <a href="../index.html" style="color: white;"><span>Home</span></a>
             </div>
             <div class="customer-btn nav-btn">
 
