--- a/Phase II/LoginSignUp/customerLogin.html
+++ b/Phase II/LoginSignUp/customerLogin.html
@@ -6,9 +6,9 @@
     <meta charset="utf-8">
     <title>Mega mart customer Contact Phone 1Contact Phone 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="loginSignU_style.css">
+    <link rel="stylesheet" href="../styles/loginSignU_style.css">
     <link rel="stylesheet" href="template.css">
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../styles/header.css">
     <script type="module" src="../script/customerLoginScript.js" defer></script>
 </head>
 
