--- a/Phase II/SellerHomePage/seller.html
+++ b/Phase II/SellerHomePage/seller.html
@@ -5,10 +5,10 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style_dashboard.css">
+   <link rel="stylesheet" href="../styles/seller_homepage.css">
    <link rel="stylesheet" href="template.css">
-   <link rel="stylesheet" href="../header.css">
-   <link rel="stylesheet" href="../AbouUs/faq.css">
+   <link rel="stylesheet" href="../styles/header.css">
+   <link rel="stylesheet" href="../styles/faq.css">
    <title>Sell on MegaMart</title>
 </head>
 
@@ -19,7 +19,7 @@
       </div>
       <div class="nav">
         <ul>
-          <li class="home"><a href="../HomePage/index.html">Home</a></li>
+          <li class="home"><a href="../index.html">Home</a></li>
           <li class="about"><a href="../AbouUs/abouthtml.html">About</a></li>
           <li class="contact"><a href="../contactUs/contaactus.html">Contact</a></li>
           <li class="blog"><a href="../Blog/blog-display.html">Blog</a></li>
