--- a/Phase II/index.html
+++ b/Phase II/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEGA MART</title>
-    <link rel="stylesheet" href="styles/all.min.css">
+    <link rel="stylesheet" href="../styles/all.min.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="styles/home.css" type="text/css" />
 
@@ -18,7 +18,7 @@
             <!-- Header top-->
             <div class="header-top">
                 <div class="logo">
-                    <img src="images/logomart-bgremove.png" alt="logo of mega mart" id="logo" />
+                    <img src="Homepage/images/logomart-bgremove.png" alt="logo of mega mart" id="logo" />
                 </div>
                 <div class="search">
                     <input type="type" placeholder="Search..." id="search" list="productType" />
@@ -74,9 +74,9 @@
                 <!-- Header top right icons-->
                 <div class="signup">
                     <div class="sign-up">
-                        <a href="../SellerHomePage/seller.html" style="color: white;"><button> <span>Seller</span></a>
+                        <a href="SellerHomePage/seller.html" style="color: white;"><button> <span>Seller</span></a>
                         </button>
-                        <a href="../LoginSignUp/customerLogin.html" style="color: white;"><button> <span>Sign up</span></a>
+                        <a href="LoginSignUp/customerLogin.html" style="color: white;"><button> <span>Sign up</span></a>
                         </button>
                     </div>
                     <div class="cart-icon">
@@ -164,7 +164,7 @@
                 <div class="product-list-top">
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/nokia.png" alt="">
+                            <img src="Homepage/images/nokia.png" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -174,7 +174,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -185,7 +185,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/furniture1.jpg" alt="">
+                            <img src="Homepage/images/furniture1.jpg" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -196,7 +196,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/baby.jfif" alt="">
+                            <img src="Homepage/images/baby.jfif" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -207,7 +207,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/feature_3.png" alt="">
+                            <img src="Homepage/images/feature_3.png" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -218,7 +218,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/watch.png" alt="">
+                            <img src="Homepage/images/watch.png" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -229,7 +229,7 @@
                     </div>
                     <div class="product-detail-top">
                         <picture class="product-img">
-                            <img src="./images/grocery.jfif" alt="">
+                            <img src="Homepage/images/grocery.jfif" alt="">
                         </picture>
                         <a href="#">
                             <div class="catagory-name">
@@ -251,7 +251,7 @@
                 <div class="product-list">
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/1.png" alt="">
+                            <img src="Homepage/images/1.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -292,7 +292,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/5.png" alt="">
+                            <img src="Homepage/images/5.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -333,7 +333,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/11.png" alt="">
+                            <img src="Homepage/images/11.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -374,7 +374,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/6.png" alt="">
+                            <img src="Homepage/images/6.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -415,7 +415,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/banner2.png" alt="">
+                            <img src="Homepage/images/banner2.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -456,7 +456,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/wearables.jpg" alt="">
+                            <img src="Homepage/images/wearables.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -497,7 +497,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/smartTv.jpg" alt="">
+                            <img src="Homepage/images/smartTv.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -538,7 +538,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/t-shirts-img.jpg" alt="">
+                            <img src="Homepage/images/t-shirts-img.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -579,7 +579,7 @@
                     </div>
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -621,7 +621,7 @@
                     <!-- ************************************************* -->
                     <div class="second">
                         <picture class="product-img">
-                            <img src="./images/2.png" alt="">
+                            <img src="Homepage/images/2.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -674,7 +674,7 @@
                 <div class="product-list">
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -715,7 +715,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/954_generated.jpg" alt="">
+                            <img src="Homepage/images/954_generated.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -756,7 +756,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/one.png" alt="">
+                            <img src="Homepage/images/one.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -797,7 +797,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/3.png" alt="">
+                            <img src="Homepage/images/3.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -838,7 +838,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/banner3.png" alt="">
+                            <img src="Homepage/images/banner3.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -879,7 +879,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/laptopwhite.jpg" alt="">
+                            <img src="Homepage/images/laptopwhite.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -920,7 +920,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/250.jpg" alt="">
+                            <img src="Homepage/images/250.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -961,7 +961,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/Project_182-04_generated.jpg" alt="">
+                            <img src="Homepage/images/Project_182-04_generated.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1002,7 +1002,7 @@
                     </div>
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1044,7 +1044,7 @@
                     <!-- ************************************************* -->
                     <div class="third">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1097,7 +1097,7 @@
                 <div class="product-list">
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/watch.png" alt="">
+                            <img src="Homepage/images/watch.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -1138,7 +1138,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/grocery.jfif" alt="">
+                            <img src="Homepage/images/grocery.jfif" alt="">
                         </picture>
                         <div class="details">
 
@@ -1179,7 +1179,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/nokia-air.png" alt="">
+                            <img src="Homepage/images/nokia-air.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -1220,7 +1220,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/Laptops/macos.jpg" alt="">
+                            <img src="Homepage/images/Laptops/macos.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1261,7 +1261,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/Phones/iphonex.jpg" alt="">
+                            <img src="Homepage/images/Phones/iphonex.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1302,7 +1302,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/printerScanner.jpg" alt="">
+                            <img src="Homepage/images/printerScanner.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1343,7 +1343,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1384,7 +1384,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/banner3.png" alt="">
+                            <img src="Homepage/images/banner3.png" alt="">
                         </picture>
                         <div class="details">
 
@@ -1425,7 +1425,7 @@
                     </div>
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1467,7 +1467,7 @@
                     <!-- ************************************************* -->
                     <div class="fourth">
                         <picture class="product-img">
-                            <img src="./images/suit.jpg" alt="">
+                            <img src="Homepage/images/suit.jpg" alt="">
                         </picture>
                         <div class="details">
 
@@ -1650,7 +1650,7 @@
 
         </footer>
     </div>
-    <script src="./script/home.js"></script>
+    <script src="../script/home.js"></script>
 </body>
 
 </html>
