--- a/Phase II/AbouUs/faq.html
+++ b/Phase II/AbouUs/faq.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MEGA MART</title>
-    <link rel="stylesheet" href="faq.css">
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../styles/faq.css">
+    <link rel="stylesheet" href="../styles/header.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
        main {
@@ -129,33 +129,6 @@
             </ul>  
         </main>
     </div>
-
-    <footer>
-        <div class="social">
-            <div class="call">
-                <i class="fas fa-phone"></i>
-                <span>CALL US</span>
-                <p>+25199485769</p>
-            </div>
-
-            <div class="call">
-                <i class="fas fa-map-marker-alt"></i>
-                <span>LOCATE US</span>
-                <p>Addis Ababa science and technology university</p>
-            </div>
-
-            <div class="call">
-                <i class="far fa-envelope-open"></i>
-                <span>SEND US EMAIL</span>
-                <p>store@megamart.com</p>
-            </div>
-
-            <div class="foot-bottom call">
-                All righ reserved &copy; 2022. <span>MEGAMART</span>
-            </div>
-        </div>
-
-    </footer>
     <script src="./script/home.js"></script>
 </body>
 </html>
