--- a/Phase II/LoginSignUp/sellerLoginSignup.html
+++ b/Phase II/LoginSignUp/sellerLoginSignup.html
@@ -6,11 +6,11 @@
     <meta charset="utf-8">
     <title>Mega mart customer Contact Phone 1Contact Phone 1</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="loginSignU_style.css">
+    <link rel="stylesheet" href="../styles/loginSignU_style.css">
     <link rel="stylesheet" href="styles/home.css" type="text/css" />
     <link rel="stylesheet" href="template.css">
     <script type="module" src="../script/sellerScript.js" defer></script>
-    <link rel="stylesheet" href="../header.css">
+    <link rel="stylesheet" href="../styles/header.css">
 </head>
 
 <body onload="load_dataFromLS('CustomerRegistration')">
