--- a/Phase II/contactUs/contaactus.html
+++ b/Phase II/contactUs/contaactus.html
@@ -5,9 +5,9 @@
         <meta charset= "utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fortawesome/fontawesome-free@5.15.4/css/fontawesome.min.css" integrity="sha384-jLKHWM3JRmfMU0A5x5AkjWkw/EYfGUAGagvnfryNV3F9VqM98XiIH7VBGVoxVSc7" crossorigin="anonymous">
-        <link rel="stylesheet" type="text/css" href="contact.css">
-        <link rel="stylesheet" href="../header.css">
-       <script src="contact.js"></script>
+        <link rel="stylesheet" type="text/css" href="../styles/contact.css">
+        <link rel="stylesheet" href="../styles/header.css">
+       <script src="../script/contact.js"></script>
     </head>
     <body>
         <header id="myHeader">
