--- a/Phase II/contactUs/contaactus.html
+++ b/Phase II/contactUs/contaactus.html
@@ -16,7 +16,7 @@
             </div>
             <div class="nav">
               <ul>
-                <li class="home"><a href="../seller.html">Home</a></li>
+                <li class="home"><a href="../index.html">Home</a></li>
                 <li class="about"><a href="../AbouUs/abouthtml.html">About</a></li>
                 <li class="about"><a href="#">Contact</a></li>
                 <li class="news"><a href="../LoginSignUp/customerLogin.html" >Login</a></li>
