--- a/Phase II/SellerHomePage/seller.html
+++ b/Phase II/SellerHomePage/seller.html
@@ -73,7 +73,7 @@
                </div>
    
                <div class="sign-upbtn">
-                  <a href="LoginSignUp/sellerLoginSignup.html">Sign Up</a>
+                  <a href="../LoginSignUp/sellerLoginSignup.html">Sign Up</a>
                </div>
             </div>
          </div>
@@ -135,7 +135,7 @@
          <div class="row">
             <div class="content content-1">
                <h2>Ready to grow Your <small> Business with Us!</small></h2>
-               <a href="LoginSignUp/sellerLoginSignup.html">Start Selling</a>
+               <a href="../LoginSignUp/sellerLoginSignup.html">Start Selling</a>
             </div>
          </div>
       </section>
