--- a/Phase II/index.html
+++ b/Phase II/index.html
@@ -16,7 +16,7 @@
 <body>
     
     <div class="container" id="container">
-        <header>
+        <header class="myHeader">
             <!-- Header top-->
             <div class="header-top">
                 <div class="logo">
@@ -90,7 +90,7 @@
             </div>
 
         </header>
-        <nav>
+        <nav class="navigation" >
 
             <div class="all-catagory nav-btn">
                 <!-- <a href="#">all category</a> -->
@@ -138,8 +138,6 @@
                 </div>
                 <a href="Blog/blog.html" style="color: white;"><span>Delivery</span></a>
             </div>
-
-
             <div class="currency-btn nav-btn">
                 <div class="icon">
                     <i class="fas fa-newspaper"></i>
@@ -598,7 +596,7 @@
                 </div>
             </div>
 
-            <div class="product-catagory">
+            <div class="product-catagory reccomendation">
                 <div class="catagory-head">
                     <h2 id="cat">Recommendation</h2>
                     <p id="add">
@@ -961,7 +959,7 @@
 
                 </div>
             </div>
-            <div class="product-catagory">
+            <div class="product-catagory hot_deals">
                 <div class="catagory-head">
                     <h2 id="cat">Hot Deals</h2>
                     <p id="add">
@@ -1325,7 +1323,7 @@
                 </div>
             </div>
         </main>
-        <footer>
+        <footer class="footer">
             <div class="subscription">
                 <div class="parent-wrapper">
                     <div class="subscribe-wrapper">
@@ -1564,7 +1562,7 @@
         </div>
     </div>
 
-    <script src="../script/home.js"></script>
+    <script src="script/home.js"></script>
     <script>
         const button = document.querySelectorAll('.buy_now')
         const container = document.getElementById('container')
